--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -1,14 +1,13 @@
-name: Run Python Script on Schedule
+name: Run Python Script and Deploy to GitHub Pages
 
 on:
   schedule:
-    # 每天午夜12点 UTC 执行一次
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *'  # 每天午夜12点 UTC 执行一次
   workflow_dispatch:  # 允许手动触发
 
 jobs:
   run-script:
-    runs-on: ubuntu-latest  # 选择运行环境
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -17,12 +16,28 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'  # 选择你要使用的 Python 版本
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt  # 如果有依赖，确保requirements.txt在你的项目中
+        pip install -r requirements.txt  # 如果有依赖
+
+    - name: Set up environment variables
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      run: |
+        echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV  # 将 Secret 设置为环境变量    
 
     - name: Run Python script
       run: |
         python main.py  # 执行你的 Python 脚本
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        # 这里是你要推送到 gh-pages 的目录
+        folder: ./  # 假设 HTML 文件在根目录
+        # 设置 gh-pages 分支
+        target_branch: gh-pages
+        # 设置 GitHub token（需要设置在 GitHub Secrets 中）
+        token: ${{ secrets.GITHUB_TOKEN }}
