--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -32,6 +32,9 @@ jobs:
       run: |
         python main.py  # 执行你的 Python 脚本
 
+    - name: Debug token
+      run: echo "Token: ${{ secrets.GITHUB_TOKEN }}"
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
