--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -38,9 +38,6 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        # 这里是你要推送到 gh-pages 的目录
-        folder: ./  # 假设 HTML 文件在根目录
-        # 设置 gh-pages 分支
-        target_branch: gh-pages
-        # 设置 GitHub token（需要设置在 GitHub Secrets 中）
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./  # 假设 HTML 文件在根目录
+        publish_branch: gh-pages  # 将内容推送到 gh-pages 分支
